# daddy

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  daddy.py  list.py  requirements.txt  setup.cfg  setup.py  tox.ini
