[metadata]
name = daddy
version = attr: daddy.__version__
author = Martin Stefanik
author_email = stefanik.mar@gmail.com
maintainer = Martin Stefanik
maintainer_email = stefanik.mar@gmail.com
url = https://github.com/martinstefanik/daddy
description = CLI tool for verification of domain name availability
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
platform = any
keywords = CLI, domain names, godaddy.com
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP

[options]
zip_safe = true
python_requires = >= 3.6
py_modules = daddy
test_suite = tests
setup_requires =
    setuptools >=46.4.0
install_requires =
    requests >=2.25.1
    click >=7.1.2

[options.extras_require]
dev =
    tox
    tox-pyenv

[options.entry_points]
console_scripts =
    daddy = daddy:daddy

[check]
metadata = true
strict = true

[sdist]
formats = zip, gztar

[flake8]
exclude =  .eggs, .git, __pycache__, .tox, .vscode, build/, dist/
max_line_length = 80
extend_ignore = D205, D212, D415, E203
docstring_convention = google

[isort]
profile = black
line_length = 80
filter_files = true
